# ISS_tools

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
ISS_tools/: Pfam.py  helpers.py  parse_dali_txt.py  pfam_download.py  pfam_hmmsearch.py  pfam_io.py  visual.py
demo_data/: PRELI.CL0209.TRUE.dali.tsv  pr80A.AFDB2.pf.tsv  pr80A.CL0125.TRUE.dali.tsv
notebooks/: demo_1.ipynb  subset.tsv
pfamdata/: Pfam_data.tsv  README
scripts/: dalitool.py  pfamtool.py
tests/: 6vg5A.dali.tsv  6vg5A.pf.tsv  6vg5A.txt  README  README.md  pf-parse.out  pf-search.out  test.clan_hmmer_tc.tsv  test.fasta  test.list
