[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ISS_tools"
version = "0.1.0"
description = "Tools for parsing and annotating ISS/DALI output using Pfam"
readme = "README.md"
requires-python = ">=3.7"
authors = [{name="Liisa Holm", email="liisa.holm@helsinki.fi"}]
dependencies = ["pandas"]

[project.scripts]
pfamtool = "ISS_tools.pfamtool:main"

[tool.setuptools.packages.find]
where = ["ISS_tools"]
include = ["ISS_tools", "ISS_tools.*"]

[tool.setuptools]
include-package-data = true


[project.optional-dependencies]
dev = [
    "ruff>=0.12.3",
    "pre-commit>=2.21",
]

[tool.ruff]
format.quote-style = "double" # Change this to "single" to have strings with ' sign instead.